app/assets/stylesheets/global.scss
* {
  font-family: 'Playfair Display', Georgia, 'Times New Roman', Palatino, serif;
  color: $gradient1;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Passion One', sans-serif;
  color: $gradient1;
} 

html {
  position: relative;
  min-height: 100%;
}

body {
  background-color: black;
  margin-bottom: 200px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}

a {
  text-decoration: none;
  color: $gradient1;
  
  &:hover {
    text-decoration: underline;
  }
}

.header {
  text-align: center;
  margin-bottom: 20px;
  font-size: $header-font-size;
  ;
}

.sub-header p {
  text-align: left;
  margin-bottom: 20px;
  font-size: $large-font-size;
}

label.form-label {
  font-size: $large-font-size;
  color: $gradient1;
  &.light-label {
    color: $gradient1;
  }
}

.title-bar {
  font-family: "Dancing Script", cursive;
  font-weight: 400;
  font-style: normal;
  font-size: 28px;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

.navbar {
  background-color: $gradient1;
  
  .navbar-nav > .nav-item > .nav-link,
  .navbar-nav > .nav-item > i {
    color: $gradient6
  }

  .navbar-toggler {
    background-color: $gradient6;
    height: 40px;
  }
}

.container-fluid {
  .admin-actions {
    display: flex;
    justify-content: center;
    gap: 10px;
    margin-bottom: 10px;
    a {
      color: $gradient1
    }

    .text-lowercase {
      text-transform: lowercase;
    }

    a:not(:last-child):after {
      content: " | ";
    }

    .button-link {
      background: none;
      border: none;
      color: $gradient1;
      text-decoration: none;
      cursor: pointer;
      padding: 0;
      font-size: 16px;
      
      &:hover {
        text-decoration: underline;
      }
    }
  }
}

.actions {
  display: flex;
  justify-content: center;
  gap: 10px;
  margin: 0 auto;
  margin-top: 20px;

  .primary-button {
    background-color: $gradient1;
    color: black;
    border: 1px solid $gradient1;
    font-size: 14px;
    padding: 5px 10px;
    border-radius: 3px;

    &:hover {
      background-color: $gradient5;
      color: $gradient1;
    }
  }

  .secondary-button {
    background-color: black;
    color: $gradient1;
    border: 1px solid $gradient1;
    font-size: 14px;
    padding: 5px 10px;
    border-radius: 3px;

    &:hover {
      background-color: $gradient1;
      color: black;
    }
  }
}

// pagination styles
.apple_pagination {
  background: $gradient1;
  border: 1px solid $gradient1;
  text-align: center;
  padding: 1em;
  cursor: default;
  a, span {
    padding: 0.2em 0.3em
  }
  .disabled {
    color: black
  }
  .current {
    font-style: normal;
    background-color: black;
    display: inline-block;
    width: 1.4em;
    height: 1.4em;
    line-height: 1.5;
    -moz-border-radius: 1em;
    -webkit-border-radius: 1em;
    border-radius: 1em;
    text-shadow: rgba(white, .8) 1px 1px 1px;
  }
  a {
    text-decoration: none;
    color: black;
    &:hover, &:focus {
      text-decoration: underline;
    }
  }
}

